--- a/babykids&toys.css
+++ b/babykids&toys.css
@@ -326,6 +326,7 @@
     top: 40px;
     transition: 0.5s;
     background-color: white;
+    z-index: 3000;
   }
   
   #check:checked ~ .sidebar {
